add user device raw data
